# ICM20948-linux-i2c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
src/: AHRSMath.cpp  AHRSMath.h  ICM20948.cpp  ICM20948.h  IMUData.h  MadgwickAHRS.cpp  MadgwickAHRS.h  SimpleAHRS.cpp  SimpleAHRS.h  icm20948.cpp  icm20948.h  imu_data.h
src/ahrs/: ahrs_math.cpp  ahrs_math.h  madgwick_ahrs.cpp  madgwick_ahrs.h  simple_ahrs.cpp  simple_ahrs.h
tests/: ICM20948_app.cpp  icm20948_app.cpp
